# AI

./: .gitignore  README.md  index.js  pyproject.toml  test_transfer.py  voice_agent_flow.md  voice_agent_flow_chart.md
app/: freshdesk.py  groq.py  main.py  state.py  voice.py
voice-agent/app/: freshdesk.py  groq.py  main.py  state.py  voice.py
